went through to make sure all code was properly formatted, well commented, and easily readable

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,7 @@
+/* Classes */
+
 .scoreBox {
-    width:100%;
+    width:75%;
     margin:0 auto;
     text-align:center;
 }
@@ -27,6 +29,8 @@
     margin-right: 1px;
 }
 
+/* Media Queries */
+
 @media screen and (max-width: 1332px) {
     .playerScoreCount {
         width: 100%;
@@ -36,18 +40,3 @@
     }
 
 }
-
-@media screen and (max-width: 960px) {
-
-}
-
-@media screen and (max-width: 768px) {
-.playerScoreCount {
-    width: 100%;
-}
-}
-
-@media screen and (max-width: 640px) {
-
-}
-
